--- a/main.html
+++ b/main.html
@@ -7,7 +7,9 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<di>
+		My current favourite song is <a href="https://www.youtube.com/watch?v=g6fnFALEseI">Kesariya</a>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
